fixed duplication and node miscreation
